# elektra_rust

elektra/: .gitignore  Cargo.toml
elektra-clib/: .gitignore  Cargo.toml
elektra-clib/examples/basic/: Makefile  basic  main.c
elektra-clib/resources/headers/: kdb.h
elektra-clib/src/: lib.rs  structs.rs
elektra/src/: key.rs
